# Brain-Tumor-Detection

./: .gitignore  Dockerfile  README.md  download_dataset.py  pyproject.toml  requirements.txt
Dataset/: README.md
Images/: README.md
Model/: README.md  brain_tumor_model.ipynb
src/brain_tumor_detection/: __init__.py  config.py  data.py  evaluate.py  models.py  predict.py  train.py
web_app/: app.py
web_app/static/css/: styles.css
web_app/static/js/: app.js
web_app/templates/: index.html
