[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brain-tumor-detection"
version = "1.0.0"
description = "Brain tumor MRI classification with TensorFlow, CLI training, prediction, and a Flask upload app."
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "flask>=2.3,<4",
    "kagglehub>=0.2,<1",
    "keras>=3.0,<4",
    "matplotlib>=3.7,<4",
    "opencv-python>=4.8,<5",
    "pandas>=2.0,<3",
    "scikit-learn>=1.3,<2",
    "seaborn>=0.12,<1",
    "tensorflow>=2.16,<3",
]

[project.optional-dependencies]
notebook = [
    "jupyter>=1.0,<2",
]

[project.scripts]
brain-tumor-train = "brain_tumor_detection.train:main"
brain-tumor-predict = "brain_tumor_detection.predict:main"

[tool.setuptools.packages.find]
where = ["src"]
